force-app/main/default/objects/ssot__ActionPlanTemplateAssignment__dlm/fields/ssot__AssignmentType__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssignmentType__c</fullName>
    <label>Assignment Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssignmentType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>