force-app/main/default/objects/ssot__ActionPlanTemplateAssignment__dlm/fields/ssot__AssociatedObjectObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssociatedObjectObject__c</fullName>
    <label>Associated Object Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssociatedObjectObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>