force-app/main/default/objects/ssot__ActionPlanTemplateAssignment__dlm/fields/ssot__AssociatedRecordType__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssociatedRecordType__c</fullName>
    <label>Associated Record Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssociatedRecordType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>