force-app/main/default/objects/ssot__ActionPlanTemplateAssignment__dlm/fields/ssot__IsApplicable__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsApplicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Applicable</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsApplicable</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>