force-app/main/default/objects/ssot__ActionPlanTemplateAssignment__dlm/fields/ssot__rel_1719818173067_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719818173067_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ActionPlanTemplateAssignment_ActionP_rel</label>
    <referenceTo>ssot__ActionPlanTemplateVersion__dlm</referenceTo>
    <relationshipLabel>ActionPlanTemplateAssignment_ActionP_rel</relationshipLabel>
    <relationshipName>rel_1719818173067_end</relationshipName>
    <type>Lookup</type>
</CustomField>