force-app/main/default/objects/ssot__ActionPlanTemplateAssignment__dlm/fields/ssot__rel_1719819621593_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819621593_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ActionPlanTemplateAssignment_Associa_rel</label>
    <referenceTo>ssot__Program__dlm</referenceTo>
    <relationshipLabel>ActionPlanTemplateAssignment_Associa_rel</relationshipLabel>
    <relationshipName>rel_1719819621593_end</relationshipName>
    <type>Lookup</type>
</CustomField>