force-app/main/default/objects/ssot__ActionPlanTemplateAssignment__dlm/fields/ssot__TemplateDisplayOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__TemplateDisplayOrderNumber__c</fullName>
    <label>Template Display Order</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TemplateDisplayOrderNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>